@@ -9,9 +9,11 @@ Logging and Diagnostics:
 - Add `yt-dlp` session log viewer dialog with real-time updates
 - Implement "All Logs" tab showing complete session history
 - Implement "Current Run" / "Last Run" tab that changes based on `yt-dlp` execution status
-- Add automatic log refresh every 250ms with auto-scroll to bottom
 - Implement in-memory session log tracking with real-time capture from subprocess output
 - Use monospaced Consolas font for log display and Technical Details tabs
+- Change log viewer to non-modal dialog allowing main window interaction
+- Add real-time log display updates as `yt-dlp` output is processed
+- Add automatic log viewer cleanup when main window closes or on Ctrl+Q
 
 Memory Management:
 
